# rolkotech-blog

./: .coverage  .dockerignore  .env_template  .gitignore  LICENSE  README.md  SCREENSHOTS.md  docker-compose.dev.yml  docker-compose.playwright.yml  docker-compose.yml
.github/workflows/: lint_backend.yml  lint_frontend.yml  playwright.yml  test_backend.yml  test_docker_compose.yml
backend/: .coveragerc  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
backend/app/: initial_data.py  initial_test_data.py  logger.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0696179258eb_keep_comments_if_user_is_deleted.py  1c739b75127d_add_featured_column_to_blogpost.py  47604b49c840_update_2.py  53f1bc34cf10_initial_migration.py  d52b115c9c30_add_reply_to_column_to_comment.py  d65bccdde946_updates_1.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: blog_posts.py  comments.py  login.py  sitemap.py  tags.py  uploads.py  users.py
backend/app/core/: config.py  limiter.py  security.py
backend/app/db/: crud.py  db.py
backend/app/models/: models.py
backend/app/rolkotech_email/: EmailGenerator.py  RolkoTechEmail.py
backend/app/rolkotech_email/email_templates/: password_reset.html  user_activation.html
backend/app/schemas/: blog_post.py  comment.py  image.py  tag.py  token.py  user.py
backend/app/tests/: conftest.py  test_health.py
backend/app/tests/api/routes/: test_blog_posts.py  test_comments.py  test_login.py  test_sitemap.py  test_tags.py  test_uploads.py  test_users.py
backend/app/tests/core/: test_config.py
backend/app/tests/db/: test_blog_post_crud.py  test_comment_crud.py  test_tag_crud.py  test_user_crud.py
backend/app/tests/email/: test_email_generator.py  test_rolkotech_email.py
backend/app/tests/logger/: test_logger.py
backend/app/tests/utils/: access_tokens.py
backend/scripts/: create_test_data.sh  lint.sh  prestart.sh  test.sh
docker/: .gitkeep
frontend/: .prettierrc  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/public/: robots.txt
frontend/scripts/: lint.sh
(+76 files in other folders)
